<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bethinktech.mx.pantallas.LoginScreen">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/edtCel_login"
        android:layout_alignRight="@+id/edtCel_login"
        android:layout_alignEnd="@+id/edtCel_login"
        android:layout_marginTop="15dp"
        android:id="@+id/edtContraseña_login"
        android:hint="@string/hint_contraseña" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_marginTop="116dp"
        android:id="@+id/edtCel_login"
        android:hint="@string/hint_usuario"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/btn_login"
        android:layout_below="@+id/edtContraseña_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="accionLogin"/>

    <TextView
        android:text="@string/btn_recuperar_contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="34dp"
        android:id="@+id/tvt_recuperar_login"
        android:layout_below="@+id/btn_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="12sp"
        android:onClick="onClickRecuperar"
        android:textColor="@color/bg_link_accion" />

    <TextView
        android:text="@string/btn_link_registar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvt_registar_login"
        android:onClick="onclickRegistro"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/tvt_recuperar_login"
        android:layout_alignBottom="@+id/tvt_recuperar_login"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="22dp"
        android:layout_marginEnd="22dp"
        android:textColor="@color/bg_link_accion" />
</RelativeLayout>
