<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/texto_codigo_celular"
        android:textColor="@color/brown"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/pinBox0"
                android:inputType="numberPassword"
                android:password="true"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:editable="false"
                android:text=""
                android:layout_margin="10dip"
                android:textSize="40sp"
                android:textColor="#000000"
                android:gravity="center"
                android:background="@drawable/back"
                tools:ignore="Deprecated,TextViewEdits" />
            <TextView
                android:id="@+id/pinBox1"
                android:inputType="numberPassword"
                android:password="true"
                android:editable="false"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:text=""
                android:layout_margin="10dip"
                android:textSize="40sp"
                android:textColor="#000000"
                android:gravity="center"
                android:background="@drawable/back"
                tools:ignore="Deprecated,TextViewEdits" />
            <TextView
                android:id="@+id/pinBox2"
                android:inputType="numberPassword"
                android:password="true"
                android:editable="false"
                android:text=""
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_margin="10dip"
                android:textSize="40sp"
                android:textColor="#000000"
                android:gravity="center"
                android:background="@drawable/back"
                tools:ignore="Deprecated,TextViewEdits" />
            <TextView
                android:id="@+id/pinBox3"
                android:inputType="numberPassword"
                android:password="true"
                android:editable="false"
                android:text=""
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_margin="10dip"
                android:textSize="40sp"
                android:textColor="#000000"
                android:gravity="center"
                android:background="@drawable/back"
                tools:ignore="Deprecated,TextViewEdits" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/numericPad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="10dp"
            android:shrinkColumns="*"
            android:stretchColumns="*" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button1"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_gradient_selector"
                    android:gravity="center"
                    android:padding="6dip"
                    android:text="@string/text_button_uno"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_gradient_selector"
                    android:gravity="center"
                    android:padding="6dip"
                    android:text="@string/text_button_dos"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_gradient_selector"
                    android:gravity="center"
                    android:padding="6dip"
                    android:text="@string/text_button_tres"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    tools:ignore="ButtonStyle" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button4"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_gradient_selector"
                    android:gravity="center"
                    android:padding="6dip"
                    android:text="@string/text_button_cuatro"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_gradient_selector"
                    android:gravity="center"
                    android:padding="6dip"
                    android:text="@string/text_button_cinco"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_gradient_selector"
                    android:gravity="center"
                    android:padding="6dip"
                    android:text="@string/text_button_seis"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    tools:ignore="ButtonStyle" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button7"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_gradient_selector"
                    android:gravity="center"
                    android:padding="6dip"
                    android:text="@string/text_button_siete"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_gradient_selector"
                    android:gravity="center"
                    android:padding="6dip"
                    android:text="@string/text_button_ocho"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_gradient_selector"
                    android:gravity="center"
                    android:padding="6dip"
                    android:text="@string/text_button_nueve"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    tools:ignore="ButtonStyle" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/buttonExit"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_gradient_selector"
                    android:gravity="center"
                    android:padding="6dip"
                    android:text="@string/text_button_salir"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button0"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_gradient_selector"
                    android:gravity="center"
                    android:padding="6dip"
                    android:text="@string/text_button_zero"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/buttonDeleteBack"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_gradient_selector"
                    android:gravity="center"
                    android:padding="6dip"
                    android:text="@string/text_button_borrar"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    tools:ignore="ButtonStyle" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/statusMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="center"
            android:textColor="#ff0000"
            android:textSize="20sp"
            android:padding="5dip"
            />
    </LinearLayout>

</RelativeLayout>